<?xml version="1.0"?>
<package format="2">
  <name>rtr_double_arm_v7</name>
  <version>0.0.1</version>
  <description>The rtr_double_arm_v7 package</description>
  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>

  <exec_depend>rtr_joycon</exec_depend>
  <exec_depend>rtr_double_arm_v7_control</exec_depend>
  <exec_depend>rtr_double_arm_v7a_moveit_config</exec_depend>
  <exec_depend>rviz</exec_depend>
  
  <exec_depend>libnabo</exec_depend>
  <exec_depend>libpointmatcher</exec_depend>
  <exec_depend>ethzasl_icp_mapping</exec_depend>
  <exec_depend>pointcloud_tools</exec_depend>

  <export>
  </export>
</package>
