<?xml version="1.0"?>
<package format="2">
  <name>rtr_robot</name>
  <version>0.1.0</version>
  <description>The rtr_robot package</description>

  <maintainer email="groadpg@gmail.com">Ryodo Tanaka</maintainer>

  <license>BSD</license>

  <url type="repository">http://gitlab.com/rogiken-tnk-ros/rtr_robot</url>
  <author email="groadpg@gmail.com">Ryodo Tanaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rtr_double_arm_v7</exec_depend>
  
  <export>
    <metapackage/>
  </export>

</package>
