<package format="2">
  <name>rtr_rviz_camera_switcher</name>
  <version>1.0.0</version>
  <description>Rogoken+/TNK-ROS Camera Switching Rviz Panel plugin.</description>

  <author email="pythagora.yoshimoto@gmail.com">HansRobo</author>
  <maintainer email="pythagora.yoshimoto@gmail.com">HansRobo</maintainer>

  <license>Appache2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <depend>class_loader</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rviz</depend>
  <depend>eigen</depend>
  <depend>qtbase5-dev</depend>
  <depend>std_srvs</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
